--- a/frontend/src/app/componentes/administrador/modificar-promocion/modificar-promocion.component.html
+++ b/frontend/src/app/componentes/administrador/modificar-promocion/modificar-promocion.component.html
@@ -17,7 +17,7 @@
 
                     <div class="row">
                         <div class="col-12 col-md-6">
-                            <img [src]="'http://localhost:3000/api/get-image/' + promocionActual.urlportada" alt="" class="img-thumbnail">
+                            <img [src]="url + 'get-image/' + promocionActual.urlportada" alt="" class="img-thumbnail">
                         </div>
 
                         <div class="col-12 col-md-6">
