--- a/frontend/src/app/componentes/administrador/promociones/promociones.component.html
+++ b/frontend/src/app/componentes/administrador/promociones/promociones.component.html
@@ -47,7 +47,7 @@
                         <td>{{promocion.idproducto}}</td>
                         <td>{{promocion.nombre}}</td>
                         <td>L {{promocion.precio}}</td>
-                        <td>% {{promocion.porcentajedescuento}}</td>
+                        <td>{{promocion.porcentajedescuento}} %</td>
                         <td class="text-center">L {{promocion.preciocondescuento}}</td>
                         <td>{{promocion.fechafin | date:'mediumDate'}}</td>
                         <td>
