--- a/frontend/src/app/componentes/productos/productos.component.css
+++ b/frontend/src/app/componentes/productos/productos.component.css
@@ -225,3 +225,8 @@ SELECT {
 .promo-percentage h4 {
     margin-bottom: .25rem !important;
 }
+
+.pequenio {
+    margin-bottom: 15px;
+    background-color: rgb(31, 148, 148);
+}
