--- a/frontend/src/app/componentes/compartidos/encabezado/encabezado.component.html
+++ b/frontend/src/app/componentes/compartidos/encabezado/encabezado.component.html
@@ -68,7 +68,7 @@
                 </li>
 
                 <li class="nav-item">
-                    <i class="fas fa-shopping-cart" id="carro_compra"></i>
+                    <i class="fas fa-shopping-cart" [routerLink]="['/carrito']" id="carro_compra"></i>
                 </li>
             </ul>
 
