--- a/frontend/src/app/componentes/carrito/carrito.component.html
+++ b/frontend/src/app/componentes/carrito/carrito.component.html
@@ -1,7 +1,7 @@
 <app-encabezado></app-encabezado>
 <div class="container pt-5">
     <div class="row">
-        <h3 style="font-size: revert"><i class="fa fa-shopping-cart" aria-hidden="true"></i>  Carrito de compras</h3>
+        <h3 class="ml-3" style="font-size: revert"><i class="fa fa-shopping-cart" aria-hidden="true"></i>  Carrito de compras</h3>
     </div>
     <hr>
     <div class="row">
