--- a/frontend/src/app/componentes/detalle-producto/detalle-producto.component.css
+++ b/frontend/src/app/componentes/detalle-producto/detalle-producto.component.css
@@ -135,3 +135,58 @@ hr {
 .contenedor {
     overflow: hidden;
 }
+
+
+/* Estilos botón carrito */
+
+.shop-cart-btn {
+    color: white;
+    background-color: rgb(71, 150, 120);
+    border: rgb(0, 97, 68) 0.5px solid;
+}
+
+.shop-cart-btn:hover {
+    color: black;
+    background-color: rgba(27, 153, 105, 0.4);
+    border: rgb(0, 97, 68) 0.5px solid;
+}
+
+.shop-cart-btn span {
+    display: none;
+}
+
+.shop-cart-btn:hover span {
+    display: inline-flex;
+}
+
+.shop-cart-btn:active {
+    outline-style: none;
+    box-shadow: none;
+}
+
+.shop-cart-btn:focus {
+    outline-style: none;
+    box-shadow: none;
+}
+
+
+/* Estilos toast de agregado al carrito */
+
+.added-toast,
+.alert-toast {
+    position: absolute;
+    top: 5%;
+    right: 5%;
+    z-index: 100;
+    font-size: 1rem;
+}
+
+.added-toast .toast-header {
+    color: white;
+    background-color: rgb(41, 151, 118);
+}
+
+.alert-toast .toast-header {
+    color: white;
+    background-color: rgb(215, 50, 50);
+}
