--- a/frontend/src/app/componentes/detalle-producto/detalle-producto.component.html
+++ b/frontend/src/app/componentes/detalle-producto/detalle-producto.component.html
@@ -1,3 +1,25 @@
+<div class="position-relative">
+    <div class="toast d-block added-toast animated fade-in" #toast>
+        <div class="toast-header">
+            <strong class="mr-auto">Producto agregado!</strong>
+        </div>
+        <div class="toast-body">
+            Agregó {{ producto.nombre || 'El producto ' }} a su carrito de compras
+        </div>
+    </div>
+</div>
+
+<div class="position-relative">
+    <div class="toast d-block alert-toast animated fade-in" #alertToast>
+        <div class="toast-header">
+            <strong class="mr-auto">Producto agregado!</strong>
+        </div>
+        <div class="toast-body">
+            {{ producto.nombre || 'El producto ' }} ya se encuentra en su carrito de compras
+        </div>
+    </div>
+</div>
+
 <div class=" mt-4">
 
     <div class=" container">
@@ -110,6 +132,15 @@
                             </div>
                             <div class="col-5 pl-4">
                                 <button type="button" id="btn-compra" class="btn btn-outline-success btn-compra ">Comprar Ahora</button>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="container mt-3">
+                        <div class="row">
+                            <div class="col-6"></div>
+                            <div class="col-6 pr-4">
+                                <button type="button" class="btn btn-success float-right shop-cart-btn" (click)="agregarCarrito()"><span>Agregar al carrito &nbsp;</span><i class="fas fa-cart-plus"></i></button>
                             </div>
                         </div>
                     </div>
