--- a/frontend/src/app/componentes/carrito/carrito.component.html
+++ b/frontend/src/app/componentes/carrito/carrito.component.html
@@ -42,7 +42,8 @@
                     <i class="fa fa-trash-o" aria-hidden="true"></i>
                 </td>
               </tr>
-              <tr *ngIf="productosCarrito.lenght ===0">
+              <tr *ngIf="productosCarrito.length ===0">
+                  <td></td>
                   <td>No tiene ningún producto agregado al carrito</td>
               </tr>
             </tbody>
