Agregrar a carrito no autenticado
Se corrigió la estructura de la información que se guarda del carrito para usuarios no autenticados

--- a/frontend/src/app/componentes/detalle-producto/detalle-producto.component.html
+++ b/frontend/src/app/componentes/detalle-producto/detalle-producto.component.html
@@ -4,7 +4,7 @@
             <strong class="mr-auto">Producto agregado!</strong>
         </div>
         <div class="toast-body">
-            Agregó {{ producto.nombre || 'El producto ' }} a su carrito de compras
+            Agregó {{ (producto || producto.nombre) ? producto.nombre : 'El producto ' }} a su carrito de compras
         </div>
     </div>
 </div>
