carrito local storage

--- a/frontend/src/app/componentes/carrito/carrito.component.html
+++ b/frontend/src/app/componentes/carrito/carrito.component.html
@@ -37,7 +37,7 @@
                     </div>
                 </td>
                 <td>L {{producto.precio}}</td>
-                <td>{{producto.porcentajedescuento}} %</td>
+                <td>{{producto.porcentajedescuento}} {{producto.porcentajedescuento === ' ' ? ' ' : '%'}} </td>
                 <td class="pr-0 pl-0">
                     <i class="fa fa-trash-o" aria-hidden="true"></i>
                 </td>
